--- a/defs.tex
+++ b/defs.tex
@@ -90,7 +90,6 @@
 \def\Xtz{\X^\tra \! \z}
 \def\ztX{\z^\tra \! \X}
 
-
 \def\mz{\vec{m}\uz}
 \def\mn{\vec{m}\un}
 \def\Mz{\mbf{M}\uz}
@@ -99,6 +98,11 @@
 \def\an{a\un}
 \def\bz{b\uz}
 \def\bn{b\un}
+
+\def\bls{\hat{\bbeta}_\text{LS}}
+\def\sls{\hat{\sigma}^2_\text{LS}}
+\def\spdc{\hat{\sigma}^2_\text{PDC}}
+\def\tspdc{\ol{\sigma}^2_\text{PDC}}
 
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
