--- a/defs.tex
+++ b/defs.tex
@@ -104,6 +104,18 @@
 \def\spdc{\hat{\sigma}^2_\text{PDC}}
 \def\tspdc{\ol{\sigma}^2_\text{PDC}}
 
+\def\tmz{\ol{\vec{m}}\uz}
+\def\tmn{\ol{\vec{m}}\un}
+\def\tMz{\ol{\mbf{M}}\uz}
+\def\tMn{\ol{\mbf{M}}\un}
+
+\def\taz{\ol{a}\uz}
+\def\tan{\ol{a}\un}
+
+\def\tbz{\ol{b}\uz}
+\def\tbn{\ol{b}\un}
+
+
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
 \newcommand{\E}{\operatorname{E}}
@@ -128,6 +140,7 @@
 \newcommand{\B}{\operatorname{B}}   % Beta Function
 \newcommand{\dir}{\operatorname{Dir}}   % Dirichlet Distribution
 \newcommand{\po}{\operatorname{Po}}   % Poisson Distribution
+\newcommand{\ig}{\operatorname{IG}}   % Inverse Gamma Distribution
 
 \newtheorem{theorem}{Theorem}[chapter]
 \newtheorem{definition}{Definition}[chapter]
